// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render one expense passed through props 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/bbc123"
  >
    <h3>
      Rent
      :
    </h3>
  </Link>
  <p>
    Created at: 
    December 27th, 1969
  </p>
  <p>
    amount: 
    $100.95
  </p>
</div>
`;

exports[`should render one expense passed through props 2`] = `
<div>
  <Link
    replace={false}
    to="/edit/cbc123"
  >
    <h3>
      Credit Card
      :
    </h3>
  </Link>
  <p>
    Created at: 
    January 4th, 1970
  </p>
  <p>
    amount: 
    $19.50
  </p>
</div>
`;
